--- a/style.css
+++ b/style.css
@@ -2,23 +2,38 @@ body, html {
     height: 100%;
     margin: 0;
     background-color: lightgray;
+    font-family: 'Lucida Sans', serif;
+    scroll-behavior: smooth;
   }
 
+.div {
+    display: block;
+}
+
 #coverImg {
+
     background-image: url("https://i.pinimg.com/564x/9d/7b/f8/9d7bf853d819522ab6f24e0511ec1068.jpg");
     height: 100%;
     width: 100%;
-    position: absolute;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
+    visibility: visible;
+    position: relative;
+    top: 0px;
+    left: 0px;
+    overflow: hidden;
+    transform: translate3d(0px, 0px, 0px);
 }
 
+
+
 .profileImg {
-    height: 400px;
-    width: 400px;
+    height: 300px;
+    width: 300px;
     margin-left: 10%;
-    margin-top: 15%;
+    margin-top: 12%;
     border-radius: 50%;
     position: relative;
     box-shadow: 0px 6px 5px gray;
@@ -26,8 +41,8 @@ body, html {
 
 .name {
     position: absolute;
-    left: 32%;
-    top: 40%;
+    left: 27%;
+    top: 35%;
     font-size: 50px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
@@ -37,12 +52,12 @@ body, html {
 
 .content {
     position: absolute;
-    left: 32%;
-    top: 50%;
-    margin-right: 30%;
+    left: 27%;
+    top: 45%;
+    margin-right: 40%;
     font-size: 16px;
     line-height: 150%;
-    color: black;
+    color: white;
 }
 
 .home {
@@ -118,29 +133,21 @@ body, html {
     text-transform: uppercase;
 }
 
-#navbar {
+#navBar {
     position: fixed;
     top: 0px;
     display: flex;
     justify-content:space-between;
-    background-color:black;
-    color: white;
+    background-color:black!important;
+    color: white!important;
     width: 100%;
     height: 5%;
-    overflow: hidden;
+    z-index: 600;
 
-    transition: top 0.3s;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
-
-.topBar {
-    background-color: black;
-    text-decoration: none;
-    color: white;
-}
-
 
   nav ul {
     margin: 0px;
@@ -151,8 +158,10 @@ body, html {
     justify-content:space-between;
     margin-left: 5%;
     margin-right: 5%;
+    text-decoration: none;
     
   }
+
   a {
     color: white;
   }
@@ -183,7 +192,7 @@ body, html {
     text-decoration: none;
     background-color: white;
     color: black;
-    border: 1px solid black;
+    border: 3px solid black;
 }
 
 
@@ -197,7 +206,7 @@ body, html {
     text-decoration: none;
     background-color: white;
     color: black;
-    border: 1px solid black;
+    border: 3px solid black;
 
 }
 
@@ -212,39 +221,39 @@ body, html {
     text-decoration: none;
     background-color: white;
     color: black;
-    border: 1px solid black;
+    border: 3px solid black;
 }
 
 
 #seperation {
-    margin-top: 15%;
+    margin-top: 10%;
 }
 
-.aboutPage {
+#aboutPage {
     position: relative;
     background-color: rgba(0,0,0, 0.3);
-    height: 100%;
+    height: 100%
+
 }
 
 .aboutH {
     font-size: 50px;
-    position: absolute;
+    position: relative;
     font-family: 'Montserrat', sans-serif;
     font-weight: 300;
     text-transform: uppercase;
-    top: 10%;
-    left: 5%;
+    text-align: center;
+
 }
 
 
 .descriptionA {
 
-    font-size: 30px;
-    position: relative;
-    width: 50%;
-    height: 100%;
-    top: 25%;
-    left: 5%;
+    font-size: 20px;
+    position: absolute;
+    width: 30%;
+    bottom: 30%;
+    left: 60%;
 
 }
 
